crates/rspyts-macros/tests/ui/non_pub_field.rs
use rspyts::bridge;

#[bridge]
pub struct Hidden {
    pub shown: u32,
    secret: u32,
}

fn main() {}
